cmake_minimum_required(VERSION 3.28)
project(mod01)

set(CMAKE_CXX_STANDARD 26)

add_executable(module01-01 module01/exercise01.cpp)
add_executable(module01-02 module01/exercise02.cpp)
add_executable(module01-03 module01/exercise03.cpp)
add_executable(module01-04 module01/exercise04.cpp)
add_executable(module01-05 module01/exercise05.cpp)
add_executable(module01-06 module01/exercise06.cpp)
add_executable(module01-07 module01/exercise07.cpp)
add_executable(module01-08 module01/exercise08.cpp)
add_executable(module01-09 module01/exercise09.cpp)

add_executable(module02-01 module02/exercise01.cpp)
add_executable(module02-02 module02/exercise02.cpp)
add_executable(module02-03 module02/exercise03.cpp)
add_executable(module02-04 module02/exercise04.cpp)
add_executable(module02-05 module02/exercise05.cpp)
add_executable(module02-06 module02/exercise06.cpp)
add_executable(module02-07 module02/exercise07.cpp)
add_executable(module02-08 module02/exercise08.cpp)

add_executable(module03-01 module03/exercise01.cpp)
add_executable(module03-02 module03/exercise02.cpp)
add_executable(module03-03 module03/exercise03.cpp)
add_executable(module03-04 module03/exercise04.cpp)
add_executable(module03-05 module03/exercise05.cpp)
add_executable(module03-06 module03/exercise06.cpp)

add_executable(module04-01 module04/exercise01.cpp)
add_executable(module04-02 module04/exercise02.cpp)
add_executable(module04-03 module04/exercise03.cpp)
add_executable(module04-04 module04/exercise04.cpp)
add_executable(module04-05 module04/exercise05.cpp)
add_executable(module04-06 module04/exercise06.cpp)
add_executable(module04-07 module04/exercise07.cpp)
add_executable(module04-08 module04/exercise08.cpp)
add_executable(module04-09 module04/exercise09.cpp)
add_executable(module04-10 module04/exercise10.cpp)


add_executable(module05-01 module05/exercise01.cpp)
add_executable(module05-02 module05/exercise02.cpp)
add_executable(module05-03 module05/exercise03.cpp)
add_executable(module05-04 module05/exercise04.cpp)
add_executable(module05-05 module05/exercise05.cpp)
add_executable(module05-06 module05/exercise06.cpp)
add_executable(module05-07 module05/exercise07.cpp)

add_executable(module06-01 module06/exercise01.cpp)

add_executable(module07-01 module07/exercise01.cpp)

add_executable(module08-01 module08/exercise01.cpp module08/threadsafe_stack.cpp module08/threadsafe_stack.h)
add_executable(module08-02 module08/exercise02.cpp)
add_executable(module08-03 module08/exercise03.cpp)

add_executable(module09-01 module09/exercise01.cpp module09/threadsafe_queue.cpp module09/threadsafe_queue.h)

add_executable(module10-01 module10/exercise01.cpp module10/country.cpp module10/country.h module10/city.cpp module10/city.h module10/world-util.cpp module10/world-util.h)
add_executable(module10-02 module10/exercise02.cpp module10/country.cpp module10/country.h module10/city.cpp module10/city.h module10/world-util.cpp module10/world-util.h)
add_executable(module10-03 module10/exercise03.cpp)

add_executable(module11-01 module11/exercise01.cpp)
add_executable(module11-02 module11/exercise02.cpp)
add_executable(module11-03 module11/exercise03.cpp)
